--- a/.drone.yml
+++ b/.drone.yml
@@ -37,7 +37,7 @@ steps:
 - name: terraform plan
   image: hashicorp/terraform:1.1.8
   commands:
-  - terraform plan -var-file="${DRONE_TARGET_BRANCH}.tfvars"
+  - terraform plan -var-file="dev.tfvars"
   volumes:
   - name: dot-kube
     path: /root/.kube
@@ -45,18 +45,34 @@ steps:
     event:
     - pull_request
 
-- name: terraform apply
+- name: terraform apply (dev)
   image: hashicorp/terraform:1.1.8
   commands:
-  - terraform apply -auto-approve -var-file="${DRONE_TARGET_BRANCH}.tfvars"
+  - terraform apply -auto-approve -var-file="dev.tfvars"
+  volumes:
+  - name: dot-kube
+    path: /root/.kube
+  when:
+    branch:
+    - main
+
+- name: terraform apply (prod)
+  image: hashicorp/terraform:1.1.8
+  commands:
+  - terraform apply -auto-approve -var-file="prod.tfvars"
   volumes:
   - name: dot-kube
     path: /root/.kube
   when:
     event:
-    - push
+    - promote
+    target:
+    - prod
 
 trigger:
   branch:
-  - dev
+  - main
+  event:
+  - promote
+  target:
   - prod
