--- a/.drone.yml
+++ b/.drone.yml
@@ -59,6 +59,9 @@ steps:
 trigger:
   branch:
   - main
+  event:
+    exclude:
+    - promote
 
 ---
 kind: pipeline
@@ -89,7 +92,7 @@ steps:
   - name: dot-kube
     path: /root/.kube
 
-- name: terraform init (dev)
+- name: terraform init
   image: hashicorp/terraform:1.1.8
   commands:
   - terraform init -backend-config="secret_suffix=prod" -backend-config="namespace=demo-prod"
